Issue #3575: Incremental decoder's decode function now takes bytearray by using 's*' instead of 't#'